MT/AntLR/src/main/kotlin/antlr/PascalGrammarParser.java
// Generated from /Users/nikita/Algo-DM-laba/MT/AntLR/src/main/resources/antlr/PascalGrammar.g4 by ANTLR 4.7.2
package antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PascalGrammarParser extends Parser {
    public static final int
            PROGRAM = 1, FUNCTION = 2, PROCEDURE = 3, CONST = 4, INTEGER = 5, BOOLEAN = 6, STRING = 7,
            REAL = 8, CHAR = 9, VAR = 10, BEGIN = 11, END = 12, TRUE = 13, FALSE = 14, OR = 15, AND = 16,
            NOT = 17, IF = 18, THEN = 19, ELSE = 20, FOR = 21, TO = 22, DOWNTO = 23, WHILE = 24, DO = 25,
            ADD = 26, SUB = 27, MUL = 28, DIVS = 29, MODS = 30, EQUALS = 31, N_EQUAL = 32, GT = 33,
            GE = 34, LT = 35, LE = 36, OPEN_BRACKET = 37, CLOSE_BRACKET = 38, DOT = 39, COLON = 40,
            SEMICOLON = 41, COMMA = 42, ASSIGN = 43, NUMBER = 44, STRING_N = 45, NAME_STRING = 46,
            COMMENT_1 = 47, COMMENT_2 = 48, WS = 49;
    public static final int
            RULE_program = 0, RULE_programName = 1, RULE_programContext = 2, RULE_constContext = 3,
            RULE_constant = 4, RULE_constantValue = 5, RULE_varContext = 6, RULE_variable = 7,
            RULE_variableRow = 8, RULE_functionProcedureContext = 9, RULE_functionHeader = 10,
            RULE_procedureHeader = 11, RULE_arguments = 12, RULE_main = 13, RULE_contextMain = 14,
            RULE_statement = 15, RULE_assignmentStatement = 16, RULE_expression = 17,
            RULE_simpleExpression = 18, RULE_term = 19, RULE_signedFactor = 20, RULE_factor = 21,
            RULE_bool = 22, RULE_unsignedConstant = 23, RULE_functionCall = 24, RULE_parameterList = 25,
            RULE_operationPr1 = 26, RULE_operationPr2 = 27, RULE_operationPr3 = 28,
            RULE_varWrapper = 29, RULE_logicCicleStatments = 30, RULE_ifStatement = 31,
            RULE_cycleStatement = 32, RULE_whileStatement = 33, RULE_forStatement = 34,
            RULE_namesList = 35, RULE_type = 36;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public PascalGrammarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "program", "programName", "programContext", "constContext", "constant",
                "constantValue", "varContext", "variable", "variableRow", "functionProcedureContext",
                "functionHeader", "procedureHeader", "arguments", "main", "contextMain",
                "statement", "assignmentStatement", "expression", "simpleExpression",
                "term", "signedFactor", "factor", "bool", "unsignedConstant", "functionCall",
                "parameterList", "operationPr1", "operationPr2", "operationPr3", "varWrapper",
                "logicCicleStatments", "ifStatement", "cycleStatement", "whileStatement",
                "forStatement", "namesList", "type"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, "'+'", "'-'", "'*'", null, null, "'='", "'<>'", "'>'", "'>='",
                "'<'", "'<='", "'('", "')'", "'.'", "':'", "';'", "','", "':='"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "PROGRAM", "FUNCTION", "PROCEDURE", "CONST", "INTEGER", "BOOLEAN",
                "STRING", "REAL", "CHAR", "VAR", "BEGIN", "END", "TRUE", "FALSE", "OR",
                "AND", "NOT", "IF", "THEN", "ELSE", "FOR", "TO", "DOWNTO", "WHILE", "DO",
                "ADD", "SUB", "MUL", "DIVS", "MODS", "EQUALS", "N_EQUAL", "GT", "GE",
                "LT", "LE", "OPEN_BRACKET", "CLOSE_BRACKET", "DOT", "COLON", "SEMICOLON",
                "COMMA", "ASSIGN", "NUMBER", "STRING_N", "NAME_STRING", "COMMENT_1",
                "COMMENT_2", "WS"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "PascalGrammar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(74);
                programName();
                setState(75);
                programContext();
                setState(76);
                match(DOT);
                setState(77);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProgramNameContext programName() throws RecognitionException {
        ProgramNameContext _localctx = new ProgramNameContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_programName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(PROGRAM);
                setState(80);
                match(NAME_STRING);
                setState(81);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProgramContextContext programContext() throws RecognitionException {
        ProgramContextContext _localctx = new ProgramContextContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_programContext);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << PROCEDURE) | (1L << CONST) | (1L << VAR))) != 0)) {
                    {
                        setState(86);
                        _errHandler.sync(this);
                        switch (_input.LA(1)) {
                            case CONST: {
                                setState(83);
                                constContext();
                            }
                            break;
                            case VAR: {
                                setState(84);
                                varContext();
                            }
                            break;
                            case FUNCTION:
                            case PROCEDURE: {
                                setState(85);
                                functionProcedureContext();
                            }
                            break;
                            default:
                                throw new NoViableAltException(this);
                        }
                    }
                    setState(90);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(91);
                main();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstContextContext constContext() throws RecognitionException {
        ConstContextContext _localctx = new ConstContextContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_constContext);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                match(CONST);
                setState(95);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(94);
                            constant();
                        }
                    }
                    setState(97);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == NAME_STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstantContext constant() throws RecognitionException {
        ConstantContext _localctx = new ConstantContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_constant);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                match(NAME_STRING);
                setState(100);
                match(COLON);
                setState(101);
                type();
                setState(102);
                match(EQUALS);
                setState(103);
                constantValue();
                setState(104);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConstantValueContext constantValue() throws RecognitionException {
        ConstantValueContext _localctx = new ConstantValueContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_constantValue);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(106);
                _la = _input.LA(1);
                if (!(_la == NUMBER || _la == STRING_N)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarContextContext varContext() throws RecognitionException {
        VarContextContext _localctx = new VarContextContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_varContext);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(108);
                match(VAR);
                setState(109);
                variable();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VariableContext variable() throws RecognitionException {
        VariableContext _localctx = new VariableContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_variable);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(111);
                            variableRow();
                        }
                    }
                    setState(114);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == NAME_STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VariableRowContext variableRow() throws RecognitionException {
        VariableRowContext _localctx = new VariableRowContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_variableRow);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(116);
                namesList();
                setState(117);
                match(COLON);
                setState(118);
                type();
                setState(119);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionProcedureContextContext functionProcedureContext() throws RecognitionException {
        FunctionProcedureContextContext _localctx = new FunctionProcedureContextContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_functionProcedureContext);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(123);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case PROCEDURE: {
                        setState(121);
                        procedureHeader();
                    }
                    break;
                    case FUNCTION: {
                        setState(122);
                        functionHeader();
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(126);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == VAR) {
                    {
                        setState(125);
                        varContext();
                    }
                }

                setState(128);
                main();
                setState(129);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionHeaderContext functionHeader() throws RecognitionException {
        FunctionHeaderContext _localctx = new FunctionHeaderContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_functionHeader);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(131);
                match(FUNCTION);
                setState(132);
                match(NAME_STRING);
                setState(133);
                match(OPEN_BRACKET);
                setState(134);
                arguments();
                setState(135);
                match(CLOSE_BRACKET);
                setState(136);
                match(COLON);
                setState(137);
                type();
                setState(138);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProcedureHeaderContext procedureHeader() throws RecognitionException {
        ProcedureHeaderContext _localctx = new ProcedureHeaderContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_procedureHeader);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(140);
                match(PROCEDURE);
                setState(141);
                match(NAME_STRING);
                setState(142);
                match(OPEN_BRACKET);
                setState(143);
                arguments();
                setState(144);
                match(CLOSE_BRACKET);
                setState(145);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ArgumentsContext arguments() throws RecognitionException {
        ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_arguments);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(160);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == NAME_STRING) {
                    {
                        setState(147);
                        namesList();
                        setState(148);
                        match(COLON);
                        setState(149);
                        type();
                        setState(157);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(150);
                                    match(COMMA);
                                    setState(151);
                                    namesList();
                                    setState(152);
                                    match(COLON);
                                    setState(153);
                                    type();
                                }
                            }
                            setState(159);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MainContext main() throws RecognitionException {
        MainContext _localctx = new MainContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_main);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(162);
                match(BEGIN);
                setState(163);
                contextMain();
                setState(164);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ContextMainContext contextMain() throws RecognitionException {
        ContextMainContext _localctx = new ContextMainContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_contextMain);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(166);
                                statement();
                                setState(168);
                                _errHandler.sync(this);
                                switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                                    case 1: {
                                        setState(167);
                                        match(SEMICOLON);
                                    }
                                    break;
                                }
                            }
                        }
                    }
                    setState(174);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_statement);
        try {
            setState(178);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(175);
                    assignmentStatement();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(176);
                    functionCall();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(177);
                    logicCicleStatments();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignmentStatementContext assignmentStatement() throws RecognitionException {
        AssignmentStatementContext _localctx = new AssignmentStatementContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_assignmentStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(180);
                varWrapper();
                setState(181);
                match(ASSIGN);
                setState(182);
                expression();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_expression);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(184);
                simpleExpression();
                setState(188);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << N_EQUAL) | (1L << GT) | (1L << GE) | (1L << LT) | (1L << LE))) != 0)) {
                    {
                        setState(185);
                        operationPr3();
                        setState(186);
                        expression();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SimpleExpressionContext simpleExpression() throws RecognitionException {
        SimpleExpressionContext _localctx = new SimpleExpressionContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_simpleExpression);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(190);
                term();
                setState(194);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OR) | (1L << ADD) | (1L << SUB))) != 0)) {
                    {
                        setState(191);
                        operationPr2();
                        setState(192);
                        simpleExpression();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TermContext term() throws RecognitionException {
        TermContext _localctx = new TermContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_term);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(196);
                signedFactor();
                setState(202);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(197);
                                operationPr1();
                                setState(198);
                                term();
                            }
                        }
                    }
                    setState(204);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 13, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SignedFactorContext signedFactor() throws RecognitionException {
        SignedFactorContext _localctx = new SignedFactorContext(_ctx, getState());
        enterRule(_localctx, 40, RULE_signedFactor);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(206);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ADD || _la == SUB) {
                    {
                        setState(205);
                        _la = _input.LA(1);
                        if (!(_la == ADD || _la == SUB)) {
                            _errHandler.recoverInline(this);
                        } else {
                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                            _errHandler.reportMatch(this);
                            consume();
                        }
                    }
                }

                setState(208);
                factor();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FactorContext factor() throws RecognitionException {
        FactorContext _localctx = new FactorContext(_ctx, getState());
        enterRule(_localctx, 42, RULE_factor);
        try {
            setState(220);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(210);
                    varWrapper();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(211);
                    match(OPEN_BRACKET);
                    setState(212);
                    expression();
                    setState(213);
                    match(CLOSE_BRACKET);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(215);
                    functionCall();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(216);
                    unsignedConstant();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(217);
                    match(NOT);
                    setState(218);
                    factor();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(219);
                    bool();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BoolContext bool() throws RecognitionException {
        BoolContext _localctx = new BoolContext(_ctx, getState());
        enterRule(_localctx, 44, RULE_bool);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(222);
                _la = _input.LA(1);
                if (!(_la == TRUE || _la == FALSE)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final UnsignedConstantContext unsignedConstant() throws RecognitionException {
        UnsignedConstantContext _localctx = new UnsignedConstantContext(_ctx, getState());
        enterRule(_localctx, 46, RULE_unsignedConstant);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(224);
                match(NUMBER);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionCallContext functionCall() throws RecognitionException {
        FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
        enterRule(_localctx, 48, RULE_functionCall);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(226);
                match(NAME_STRING);
                setState(227);
                match(OPEN_BRACKET);
                setState(228);
                parameterList();
                setState(229);
                match(CLOSE_BRACKET);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParameterListContext parameterList() throws RecognitionException {
        ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
        enterRule(_localctx, 50, RULE_parameterList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(231);
                expression();
                setState(236);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(232);
                            match(COMMA);
                            setState(233);
                            expression();
                        }
                    }
                    setState(238);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final OperationPr1Context operationPr1() throws RecognitionException {
        OperationPr1Context _localctx = new OperationPr1Context(_ctx, getState());
        enterRule(_localctx, 52, RULE_operationPr1);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(239);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << MUL) | (1L << DIVS) | (1L << MODS))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
